# internal/server/handlers/device/delete.go
@@ -9,16 +9,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary		Delete a device
-// @Description	Delete a device from database
-// @Tags			Device
-// @Accept			json
-// @Produce		json
-// @Param			uuid	path	string	true	"Device Id"
-// @Success		200
-// @Failure		400	{object}	handlers.ErrorResponce
-// @Failure		500	{object}	handlers.ErrorResponce
-// @Router			/device/{uuid} [delete]
+//	@Summary		Delete a device
+//	@Description	Delete a device from database
+//	@Tags			Device
+//	@Accept			json
+//	@Produce		json
+//	@Param			uuid	path	string	true	"Device Id"
+//	@Success		200
+//	@Failure		400	{object}	handlers.ErrorResponce
+//	@Failure		500	{object}	handlers.ErrorResponce
+//	@Router			/device/{uuid} [delete]
 func (h *DeviceHandler) Delete(ctx *gin.Context) {
 	req := ctx.Param("uuid")
 	if _, errResp := utils.UuidValidationAndParse(req); errResp != nil {
