# internal/server/handlers/event/get.go
@@ -9,18 +9,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Summary		Get events
-// @Description	Get events of device from database
-// @Tags			Event
-// @Accept			json
-// @Produce		json
-// @Param			uuid		query		string	true	"UUID"
-// @Param			timeBegin	query		string	true	"Begin time range"
-// @Param			timeEnd		query		string	true	"End time range"
-// @Success		200			{object}	[]domain.Event
-// @Failure		400			{object}	handlers.ErrorResponce
-// @Failure		500			{object}	handlers.ErrorResponce
-// @Router			/event [get]
+//	@Summary		Get events
+//	@Description	Get events of device from database
+//	@Tags			Event
+//	@Accept			json
+//	@Produce		json
+//	@Param			uuid		query		string	true	"UUID"
+//	@Param			timeBegin	query		string	true	"Begin time range"
+//	@Param			timeEnd		query		string	true	"End time range"
+//	@Success		200			{object}	[]domain.Event
+//	@Failure		400			{object}	handlers.ErrorResponce
+//	@Failure		500			{object}	handlers.ErrorResponce
+//	@Router			/event [get]
 func (h *EventHandler) Get(ctx *gin.Context) {
 	layout := "2006-01-02T15:04:05.999-07:00"
 
